--- a/.github/workflows/update-currency-data.yml
+++ b/.github/workflows/update-currency-data.yml
@@ -46,6 +46,7 @@ jobs:
 
             # Push changes using the personal GitHub token
             git remote set-url origin https://x-access-token:${PERSONAL_ACCESS_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+            git pull --rebase
             git push
             echo "Currency data updated and pushed to repository."
           else
